--- a/css/styles.css
+++ b/css/styles.css
@@ -24,11 +24,11 @@ body {font-family: Helvetica, sans-serif;background-color: #000;}
 /*NAVBAR CSS BEGINS*/
 #topbar{position:fixed;top:0;display:block;float:none;width:100%;height:auto;background: none;z-index:10;/*border:1px solid yellow;*/}
 #bottombar{position:absolute;bottom:0;display:block;width:100%;height:75px;background-color:#000;z-index:10;}
-.nidlogo{display:block;float:left;margin:20px 0 20px 20px;width:25%;height:30px;z-index:11;background:url(../img/NID_white_logo.png) no-repeat center;}
-.topbarlinks{display:block;float:left;height:30px;margin:20px 20px 20px 0;width:62%;z-index:11;}
-.topbarlinks h4.white{color:#fff;bottom:10px;text-align:right;}
-#topbar .topbarlinks .btn {border: 1px solid #982cff; color: #17ffdd !important; font-size: 14px; padding: 10px 20px; margin: 0 !important; text-decoration: none; vertical-align: middle; float: right;}
-#topbar .topbarlinks .btn:hover {background: #17ffdd;color: #982cff !important;}
+.nidlogo{display:block;float:left;margin:20px 0 20px 20px;width:25%;height:30px;z-index:20;background:url(../img/NID_white_logo.png) no-repeat center;}
+.register_now{display:block;float:left;height: auto;margin:20px 0;width:100%;z-index:11;text-align: center}
+.register_now h4.white{color:#fff;bottom:10px;text-align:right;}
+.register_now .btn {border: 1px solid #982cff; color: #17ffdd !important; font-size: 14px; padding: 10px 20px; margin: 0 !important; text-decoration: none; vertical-align: middle;}
+.register_now .btn:hover {background: #17ffdd;color: #982cff !important;}
 /*NAVBAR CSS ENDS*/
 
 /*HOME SECTION CSS BEGINS*/
@@ -41,7 +41,7 @@ body {font-family: Helvetica, sans-serif;background-color: #000;}
 #home .row {max-width: 1290px;}
 #home.home-static {background-image: url(../images/home-bg.jpg) no-repeat center;-webkit-background-size: cover;-moz-background-size: cover;background-size: cover;}
 #home.home-particles {overflow: hidden;background: #020507 /*url('../img/star_mid.png') no-repeat center/ 100%*/;}
-#home.home-particles .pg-canvas {position: absolute;top: 0;left: 0;height: 100% !important;width: 100% !important;opacity: .35;background: url('../img/star_tiny.png') no-repeat center/ cover/*, url('../img/bg3.png') no-repeat center/ cover;*/}
+#home.home-particles .pg-canvas {position: absolute;top: 0;left: 0;height: 100% !important;width: 100% !important;opacity: .35;background: url('../img/star_tiny.png') no-repeat center/ cover;z-index: 1 !important;}
 #home.home-particles .shadow-overlay {display: none;}
 #home.home-slides {height: 100% !important;}
 
@@ -71,10 +71,10 @@ body {font-family: Helvetica, sans-serif;background-color: #000;}
 }
 
 /* DFrost Logo css */
-.logo-wrapper {display: block; float:left; height: 500px; width: 100%; border: 1px solid #17ffdd; }
-.logo-wrapper #logo_back {display:block;float: left;position: absolute; z-index: 8; background: url("../img/layer1.svg") no-repeat 10px 10px/40%;top: 70px; left: 40%; margin-left: -130px; height: inherit; width: inherit; -moz-animation-duration: 1s;   -webkit-animation-duration: 1s;   animation-duration: 1s;}
-.logo-wrapper #logo_mid {display:block;float: left;position: absolute; z-index: 9; background: url("../img/layer2.svg") no-repeat 10px 10px/40%;top: 70px; left: 40%; margin-left: -130px; height: inherit; width: inherit; -moz-animation-duration: 2s;   -webkit-animation-duration: 2s;   animation-duration: 2s;}
-.logo-wrapper #logo_front {display:block;float: left;position: absolute; z-index: 10; background: url("../img/layer3.svg") no-repeat 10px 10px/40%;top: 70px; left: 40%; margin-left: -130px; height: inherit; width: inherit; -moz-animation-duration: 3s;  -webkit-animation-duration: 3s;   animation-duration: 3s;}
+.logo-wrapper {display: block; float:left; height: 500px; width: 100%; /*border: 1px solid #17ffdd; */}
+.logo-wrapper #logo_back {display:block;float: left;position: absolute; z-index: 8; background: url("../img/layer1.svg") no-repeat 10px 10px/30%;top: 50px; left: 45%; margin-left: -130px; height: inherit; width: inherit; -moz-animation-duration: 1s;   -webkit-animation-duration: 1s;   animation-duration: 1s;}
+.logo-wrapper #logo_mid {display:block;float: left;position: absolute; z-index: 9; background: url("../img/layer2.svg") no-repeat 10px 10px/30%;top: 50px; left: 45%; margin-left: -130px; height: inherit; width: inherit; -moz-animation-duration: 2s;   -webkit-animation-duration: 2s;   animation-duration: 2s;}
+.logo-wrapper #logo_front {display:block;float: left;position: absolute; z-index: 10; background: url("../img/layer3.svg") no-repeat 10px 10px/30%;top: 50px; left: 45%; margin-left: -130px; height: inherit; width: inherit; -moz-animation-duration: 3s;  -webkit-animation-duration: 3s;   animation-duration: 3s;}
 
 /*Menu elements start here*/
 
@@ -202,7 +202,7 @@ body {font-family: Helvetica, sans-serif;background-color: #000;}
 
 /* Date Venue Schedule */
 .date_venue_schedule, .date_venue_schedule .date, .date_venue_schedule .venue, .date_venue_schedule .schedule{display: block;float: left;}
-.date_venue_schedule{width: 100%;height: auto;}
+.date_venue_schedule{width: 100%;height: auto;z-index: 200000;}
 .date_venue_schedule .date, .date_venue_schedule .venue, .date_venue_schedule .schedule{width: 30%;height: 100px;margin: 20px;border: 1px solid #17ffdd;color: #fff;
 text-align: center;}
 
@@ -223,12 +223,12 @@ section > h2{color: #fff; padding: 50px;}
 @media only screen and (max-width:1024px) {
   .main-content-tablecell h1 {font-size: 3.5rem;}
   .main-content-tablecell p {font-size: 1.7rem;}
-  .topbarlinks {width: 70%;}
+  
 }
 
 @media only screen and (max-width:800px) {
   .nidlogo{width: 30%;}
-  .topbarlinks {width: 64%;}
+  
 }
 
 @media only screen and (max-width:768px) {
@@ -244,7 +244,7 @@ section > h2{color: #fff; padding: 50px;}
 }
 
 @media only screen and (max-width:670px) {
-  .topbarlinks {width: 60%;}
+  
   .nidlogo {width: 33%;}
   .logo-wrapper #logo_back, .logo-wrapper #logo_mid, .logo-wrapper #logo_front{left:48%;}
 }
@@ -254,25 +254,25 @@ section > h2{color: #fff; padding: 50px;}
   .main-content-tablecell #counter {margin-bottom: .9rem;}
   .main-content-tablecell #counter span {font-size: 8.4rem;}
   .main-content-tablecell h1 {font-size: 2.7rem;}
-  #topbar .topbarlinks .btn {font-size: 0.7em;}
-  .topbarlinks {width: 51%;}
+  
+  
   .nidlogo {width: 41%;}
   .logo-wrapper #logo_back, .logo-wrapper #logo_mid, .logo-wrapper #logo_front{left:50%;}
 }
 
 @media only screen and (max-width:500px) {
   .main-content-tablecell #counter span {font-size: 7.2rem;}
-  .topbarlinks {width: 45%;}
+  
   .nidlogo {width: 46%;}
   .nidlogo {background: url(../img/NID_white_logo.png) no-repeat center/100%;}
-  .logo-wrapper #logo_back {background: url("../img/layer1.png") no-repeat 10px 10px/50%;}
-  .logo-wrapper #logo_mid {background: url("../img/layer2.png") no-repeat 10px 10px/50%;}
-  .logo-wrapper #logo_front {background: url("../img/layer3.png") no-repeat 10px 10px/50%;}
+  .logo-wrapper #logo_back {background: url("../img/layer1.svg") no-repeat 10px 10px/50%;}
+  .logo-wrapper #logo_mid {background: url("../img/layer2.svg") no-repeat 10px 10px/50%;}
+  .logo-wrapper #logo_front {background: url("../img/layer3.svg") no-repeat 10px 10px/50%;}
 }
 
 @media only screen and (max-width:448px) {
   .main-content-tablecell #counter span {font-size: 7.2rem;}
-  .topbarlinks {width: 40%;}
+  
   .nidlogo {width: 50%;}
 }
 
@@ -283,23 +283,23 @@ section > h2{color: #fff; padding: 50px;}
   .main-content-tablecell #counter span sup {font-size: .2em;top: -2.8em;}
   .main-content-tablecell h1 {font-size: 2.4rem;}
   .nidlogo {margin: 20px 10px 10px 10px;}
-  .topbarlinks {margin: 20px 10px 10px 0;width: 42%;}
-  .logo-wrapper #logo_back {background: url("../img/layer1.png") no-repeat 10px 10px/58%;}
-  .logo-wrapper #logo_mid {background: url("../img/layer2.png") no-repeat 10px 10px/58%;}
-  .logo-wrapper #logo_front {background: url("../img/layer3.png") no-repeat 10px 10px/58%;}
+  
+  .logo-wrapper #logo_back {background: url("../img/layer1.svg") no-repeat 10px 10px/58%;}
+  .logo-wrapper #logo_mid {background: url("../img/layer2.svg") no-repeat 10px 10px/58%;}
+  .logo-wrapper #logo_front {background: url("../img/layer3.svg") no-repeat 10px 10px/58%;}
   .logo-wrapper #logo_back, .logo-wrapper #logo_mid, .logo-wrapper #logo_front{top:100px;}
 }
 
 @media only screen and (max-width:375px) {
-  .topbarlinks {width: 40%;}
-  #topbar .topbarlinks .btn {padding: 10px;}
-  .logo-wrapper #logo_back {background: url("../img/layer1.png") no-repeat 10px 10px/65%;}
-  .logo-wrapper #logo_mid {background: url("../img/layer2.png") no-repeat 10px 10px/65%;}
-  .logo-wrapper #logo_front {background: url("../img/layer3.png") no-repeat 10px 10px/65%;}
+  
+  #topbar .register_now .btn {padding: 10px;}
+  .logo-wrapper #logo_back {background: url("../img/layer1.svg") no-repeat 10px 10px/65%;}
+  .logo-wrapper #logo_mid {background: url("../img/layer2.svg") no-repeat 10px 10px/65%;}
+  .logo-wrapper #logo_front {background: url("../img/layer3.svg") no-repeat 10px 10px/65%;}
 }
 @media only screen and (max-width:340px) {
   
-  .logo-wrapper #logo_back {background: url("../img/layer1.png") no-repeat 10px 10px/68%;}
-  .logo-wrapper #logo_mid {background: url("../img/layer2.png") no-repeat 10px 10px/68%;}
-  .logo-wrapper #logo_front {background: url("../img/layer3.png") no-repeat 10px 10px/68%;}
+  .logo-wrapper #logo_back {background: url("../img/layer1.svg") no-repeat 10px 10px/68%;}
+  .logo-wrapper #logo_mid {background: url("../img/layer2.svg") no-repeat 10px 10px/68%;}
+  .logo-wrapper #logo_front {background: url("../img/layer3.svg") no-repeat 10px 10px/68%;}
 }
