--- a/css/styles.css
+++ b/css/styles.css
@@ -85,7 +85,7 @@ body {font-family: Helvetica, sans-serif;background-color: #000;}
 .open span:nth-child(1) {margin-top: 10px;z-index: 19;}
 .open span:nth-child(2) {margin-top: 25px;z-index: 19;}
 .open span:nth-child(3) {margin-top: 40px;z-index: 19;}
-.sub-menu {-webkit-transition: all 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55);transition: all 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55);height: 0;width: 0;right: 0;top: 0;position: absolute;background-color: rgba(255, 0, 195, 0.3);border-radius: 50%;z-index: 23;overflow: hidden;}
+.sub-menu {-webkit-transition: all 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55);transition: all 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55);height: 0;width: 0;right: 0;top: 20px;position: absolute;background-color: rgba(255, 0, 195, 0.3);border-radius: 50%;z-index: 23;overflow: hidden;}
 .sub-menu li {
   display: block;
   float: right;
@@ -96,7 +96,7 @@ body {font-family: Helvetica, sans-serif;background-color: #000;}
   transition: all 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
 .sub-menu li:first-child {
-  margin-top: 180px;
+  margin-top: 190px;
 }
 .sub-menu li:nth-child(1) {
   -webkit-transition-delay: 0.05s;
@@ -141,7 +141,7 @@ body {font-family: Helvetica, sans-serif;background-color: #000;}
 
 .oppenned .sub-menu {
   opacity: 1;
-  height: 600px;
+  height: 650px;
   width: 600px;
 }
 .oppenned span:nth-child(2) {
@@ -157,10 +157,10 @@ body {font-family: Helvetica, sans-serif;background-color: #000;}
           transform: rotate(45deg) translateY(12px) translateX(12px);
 }
 .oppenned span:nth-child(2) {
-  height: 580px;
+  height: 600px;
   width: 580px;
-  right: -160px;
-  top: -160px;
+  right: -400px;
+  top: -170px;
   border-radius: 50%;
   background-color: rgba(152, 44, 255, 0.2);
 }
@@ -169,7 +169,7 @@ body {font-family: Helvetica, sans-serif;background-color: #000;}
           transform: rotate(-45deg) translateY(-10px) translateX(10px);
 }
 .oppenned li {
-  margin-right: 168px;
+  margin-right: 400px;
 }
 
 .button {
